# TLS1.3

./: .gitignore  CMakeLists.txt  MAKECERT.md  MAKECERTS.md  README.md  README.old.md  convert.cpp  sqisign.md
app/: client.cpp
blogs/: .~lock.blog16.odt#  .~lock.blog19.odt#  .~lock.blog22.odt#  .~lock.blog23.odt#  .~lock.blog28.odt#  .~lock.blog29.odt#  blog1.odt  blog12.odt  blog14.odt  blog15.odt  blog17.odt  blog19.odt  blog21.odt  blog22.odt  blog27.odt  blog28.odt  blog29.odt  blog5.odt
cert/: readme.md
cert/enduser/: enduser.py
clientcert/: certchain.pem  client.key
clientcert/client/: client.py
cpp/: CMakeLists.txt  README.md  README.old.md
cpp/doc/: Doxyfile  convert.cpp  list.txt
cpp/doc/blogs/: .~lock.blog48.odt#  README.md  blog11.odt  blog2.odt  blog22.odt  blog23.odt  blog29.odt  blog3.odt  blog34.odt  blog36.odt  blog37.odt  blog38.odt  blog42.odt  blog43.odt  blog44.odt  blog45.odt  blog46.odt  blog47.odt  blog48.odt  blog49.odt  blog6.odt  clientalerts.ods  serveralerts.ods  vision.odt
cpp/doc/man/man3/: ECCX08Class.3  Socket.3  TLS_session.3  crypto.3  ee_status.3  md__c___users_mscot__t_l_s1_3_cpp__r_e_a_d_m_e.3  md__c___users_mscot__t_l_s1_3_cpp_src_arduino__r_e_a_d_m_e.3  md_blogs__r_e_a_d_m_e.3  octad.3  pktype.3  ret.3  ticket.3  tls1_3.h.3  tls_cert_chain.h.3  tls_certs.h.3  tls_client_recv.h.3  tls_client_send.h.3  tls_keys_calc.h.3  tls_logger.h.3  tls_octads.h.3  tls_protocol.h.3  tls_sal.h.3  tls_sockets.h.3  tls_tickets.h.3  tls_wifi.h.3  tls_x509.h.3  unihash.3
cpp/include/: tls1_3.h  tls_bfibe.h  tls_cert_chain.h  tls_certs.h  tls_client_recv.h  tls_client_send.h  tls_keys_calc.h  tls_logger.h  tls_octads.h  tls_pqibe.h  tls_protocol.h  tls_sal.h  tls_sockets.h  tls_tickets.h  tls_wifi.h  tls_x509.h
cpp/lib/: tls_cacerts.cpp  tls_cert_chain.cpp  tls_client_cert.cpp  tls_client_recv.cpp  tls_client_send.cpp  tls_keys_calc.cpp  tls_logger.cpp  tls_octads.cpp  tls_protocol.cpp  tls_sockets.cpp  tls_tickets.cpp  tls_x509.cpp
cpp/lib/ibe/: tls_bfibe.cpp  tls_pqibe.cpp
cpp/sal/: tls_sal_m.xpp  tls_sal_mc.xpp  tls_sal_mh.xpp  tls_sal_mhp.xpp  tls_sal_ms.xpp  tls_sal_mt.xpp
cpp/scripts/: build.sh  build_m.sh  build_q.sh  build_s.sh  build_t.sh
cpp/src/arduino/: ECCX08.h  README.md  README_RP2040.md  client.cpp  config.py  library.properties
cpp/src/desktop/: client.cpp  oldclient.cpp  simple_client.cpp
cpp/src/x86/: client.cpp
doc/: list.txt
doc/blogs/: .~lock.blog31.odt#  .~lock.blog32.odt#  .~lock.blog33.odt#  .~lock.blog34.odt#  .~lock.blog35.odt#  .~lock.blog36.odt#  .~lock.blog37.odt#  .~lock.blog39.odt#  .~lock.blog42.odt#  .~lock.blog43.odt#  .~lock.blog44.odt#  .~lock.blog45.odt#  .~lock.blog46.odt#  .~lock.blog47.odt#  .~lock.clientalerts.ods#  .~lock.sal.odt#  blog10.odt  blog13.odt  blog16.odt  blog18.odt  blog20.odt  blog24.odt  blog25.odt  blog26.odt  blog30.odt  blog31.odt  blog32.odt  (+14 more)
include/: tls1_3.h  tls_cert_chain.h  tls_client_recv.h  tls_client_send.h  tls_keys_calc.h  tls_logger.h  tls_protocol.h  tls_sal.h  tls_sockets.h  tls_tickets.h
lib/: tls_cacerts.cpp  tls_cert_chain.cpp  tls_client_cert.cpp  tls_client_recv.cpp  tls_client_send.cpp  tls_keys_calc.cpp  tls_logger.cpp  tls_protocol.cpp  tls_protocol.cpp.bak  tls_sockets.cpp  tls_tickets.cpp  tls_x509.cpp
makecertchain/: README.md  makeintercert.cpp  makeleafcert.cpp  makerootcert.cpp  makeselfcert.cpp  makeservercert.cpp
rust/: Cargo.toml  readme.md
rust/client/: Cargo.toml
rust/client/src/: config.rs  main.rs
rust/client/src/sal_m/: bfibe.rs  mod.rs  pqibe.rs  sal.rs
rust/client/src/tls13/: cacerts.rs  certchain.rs  clientcert.rs  connection.rs  extensions.rs  keys.rs  logger.rs  mod.rs  sal.rs  sal1.rs  socket.rs  ticket.rs  utils.rs  x509.rs
rust/server/: Cargo.toml
rust/server/src/: config.rs  main.rs
rust/server/src/sal_m/: bfibe.rs  mod.rs  pqibe.rs  sal.rs
rust/server/src/tls13/: cacerts.rs  cert.pem  certchain.rs  connection.rs  extensions.rs  key.pem  keys.rs  logger.rs  mod.rs  sal.rs  servercert.rs  socket.rs  ticket.rs  utils.rs  x509.rs
rust/src/: config.rs  main.rs
rust/src/tls13/: cacerts.rs  certchain.rs  clientcert.rs  connection.rs  connection_1.rs  extensions.rs  keys.rs  logger.rs  mod.rs  sal.rs  ticket.rs  utils.rs  x509.rs
sal/: tls_sal_m.xpp  tls_sal_mc.xpp  tls_sal_mh.xpp  tls_sal_mhp.xpp  tls_sal_ms.xpp  tls_sal_mt.xpp
scripts/: build.sh  build_m.sh  build_s.sh
servercert/: certchain.pem  server.key
src/: 0.prepare.sh  CMakeLists.txt  Doxyfile  ECCX08.cpp  ECCX08.h  Makefile  TLS1_3.h  ca-certificates.crt  client.cpp  client.cpp.bak  config.py  debug.txt  der_encoding.txt  example.txt  gcm.cpp  list.txt  myclient.cpp  readme.md  resume.cpp  sample_client_hello.txt  search.cpp  server.cpp  store.cpp  tls_cacerts.cpp  tls_cacerts.h  tls_cert_chain.cpp  tls_cert_chain.h  tls_client_recv.cpp  tls_client_recv.h  tls_client_recv2.cpp  tls_client_send.cpp  tls_client_send.h  tls_crypto_api.cpp  tls_crypto_api.h  tls_hash.cpp  tls_hash.h  tls_keys_calc.cpp  tls_keys_calc.h  tls_logger.cpp  tls_logger.h  (+20 more)
src/arduino/: ECCX08.cpp  README.md  client.cpp  config.py
src/html/: annotated.html  classSocket.html  classes.html  files.html  globals.html  globals_func.html  globals_vars.html  index.html  md_readme.html  menudata.js  pages.html  structcapabilities.html  structcrypto.html  structret.html  structticket.html  structunihash.html  tls1__3_8h_source.html  tls__cacerts_8h.html  tls__cacerts_8h_source.html  tls__cert__chain_8h.html  tls__cert__chain_8h_source.html  tls__client__recv_8h_source.html  tls__client__send_8h_source.html  tls__keys__calc_8h_source.html  tls__logger_8h_source.html  tls__protocol_8h_source.html  tls__sockets_8h_source.html  tls__tickets_8h_source.html  tls__wifi_8h_source.html
src/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  variables_0.js
src/x86/: client.cpp
test/: echo-server.py
(+1 files in other folders)
