[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcore = { path = "../../rust/mcore" }
getrandom = "0.2.5"
zeroize = "1.5.4"
pqcrypto = "0.15.0"
pqcrypto-kyber = "0.7.5"
pqcrypto-traits = "0.3.4"
