[package]
name = "tls13-server"
authors = [
    "Michael Scott <michael.scott@tii.ae>"
]
version = "0.1.0"
edition = "2021"
description = "Pure RUST IoT-friendly implementation of TLS 1.3 protocol"
repository = "https://github.com/Crypto-TII/TLS1.3"

categories = ["cryptography", "network-programming"]
keywords = ["cryptography", "protocol", "network", "tls_1.3"]
# Please do not remove "publish=false" until the package is ready for public 
# release to prevent automatic crates.io publishing
publish = false

[dependencies]
# make sure this points to MIRACL Core rust library
mcore = { path = "../core/rust/mcore" }    # make sure this is correct
tlsecc = { path = "../TLSECC/tlsecc" }
zeroize = "1.5.4"
rand = "0.8.5"
